--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ header li{
   padding: 15px 10px;
   color: white;
   text-align: center;
+  width: 450px;
+  margin: auto;
 }
 
 /* Banner */
@@ -35,10 +37,13 @@ header li{
   background-position: center;
 }
 
-.feature{
-  padding-top: 150px;
+.feature1{
+  padding: 150px 70px;
 }
-.feature button{
+.feature2{
+  padding: 150px 40px;
+}
+.feature1 button, .feature2 button{
   background: black;
   color: whitesmoke;
   outline: none;
@@ -56,9 +61,9 @@ header li{
 }
 .portfolio img{
   display: inline-block;
-  width: 234px;
-  height: 234px;
-  padding: 3px;
+  width: 310px;
+  height: 310px;
+  padding: 5px;
 }
 
 /* Team */
@@ -84,7 +89,6 @@ header li{
 }
 /* Footer */
 footer{
-  text-align:center;
   padding: 50px 0px;
   background: black;
   color: white;
@@ -101,8 +105,14 @@ footer .fa{
   header{
     padding: 5px 0px;
   }
-  .feature{
-    padding-top: 50px;
+  .banner p{
+    width: 300px
+  }
+  .feature1{
+    padding: 20px 10px;
+  }
+  .feature2{
+    padding: 0px 10px;
   }
   
 .dropdown{
@@ -154,6 +164,6 @@ footer .fa{
   
 footer{
   padding: 35px 0px;
-  text-align: justify;
+  text-align: center;
 }
 }
